[package]
name = "bless-network"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.28", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "socks"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
colored = "2.0"
anyhow = "1.0"
async-trait = "0.1"
futures = "0.3"
config = "0.13"
tokio-util = "0.7"
dashmap = "5.4"
figlet-rs = "0.1"
